--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
 mysql-connector-python==9.1.0
-numpy==2.2.1
-SQLAlchemy==2.0.37
+numpy~=2.2.4
+SQLAlchemy~=2.0.38
 Werkzeug==3.1.3
 WTForms==3.2.1
 
+
+pytest~=8.3.5
