--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,38 @@
-venv/
+# Alembic migrations
+migrations/
+
+# VS Code
+.vscode/
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Log files
+*.log
+
+# Database files
+*.sqlite
+*.sqlite3
+*.db
+
+# Byte-compiled files
 *.pyc
 __pycache__/
-.env
+
+# Virtual environments
+venv/
+.venv/
+env/
+
+# IDE
 .idea/
 *.iml
+*.ipr
+*.iws
 misc.xml
 workspace.xml
+
+# Environment files
+.env
+.env.*
