--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 SECRET_KEY=your_secret_key_here
 
 DB_USER=your_db_user_here
-DB_PASSWORD=your_db_password_here
+DB_PASS=your_db_password_here
 DB_HOST=localhost
+DB_PORT=3306
 DB_NAME=your_db_name_here
-
-# DATABASE_URL=mysql+mysqlconnector://user:pass@host/dbname
