--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,33 @@
-version: "3.9"
+version: '3.8'
 
 services:
+  db:
+    image: mysql:8.0
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: 12345678
+      MYSQL_DATABASE: mcdmapp
+    ports:
+      - "3307:3306"  # Проксі порт хоста 3307 до контейнера 3306
+    volumes:
+      - db_data:/var/lib/mysql
+
   web:
     build: .
-    container_name: fahp_web
+    restart: always
     ports:
-      - "8000:8000"
+      - "5000:8000"  # Враховуючи, що Flask слухає на 8000 порті
     environment:
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_NAME=${DB_NAME}
-      - SECRET_KEY=${SECRET_KEY}
+      DB_USER: root
+      DB_PASS: 12345678
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_NAME: mcdmapp
+      SECRET_KEY: your_secret_key_here
+    depends_on:
+      - db
     volumes:
       - .:/app
-    command: python -u dmapp.py
-    restart: always
+
+volumes:
+  db_data:
